fix sortedDocumentList menu not changing focus on Mac

Sublime::Container::setCurrentWidget() used a QSignalBlocker to prevent
MainWindow::activateView() from being called twice. As a result, the
focus wasn't updated when changing documents with the sortedDocumentList
menu widget on Mac. This commit fixes that side-effect by using a simpler
approach where both functions only take action when setting/activating a
widget/view that is not already current.

BUG: 382338
Differential Revision: https://phabricator.kde.org/D7179